infra/k8s/base/waybill.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waybill
  labels:
    app: waybill
    app.kubernetes.io/name: waybill
    app.kubernetes.io/component: billing
    app.kubernetes.io/part-of: enclii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waybill
  template:
    metadata:
      labels:
        app: waybill
        app.kubernetes.io/name: waybill
        app.kubernetes.io/component: billing
        app.kubernetes.io/part-of: enclii
    spec:
      containers:
        - name: waybill-aggregator
          image: ghcr.io/madfam-io/enclii/waybill:1ead1b30fdb4732051596d2d2ca7726dde4acf7c
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
